k8s/development/mlOps/deployKF/app-of-apps/ingress-deploykf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ag.dev-tw-style.duckdns.org
    secretName: dev-tw-style-duckdns-tls-secret
  rules:
  - host: ag.dev-tw-style.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
